--- a/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-page/patient-page.component.html
@@ -397,7 +397,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
               <span>{{
-                getEntrollDate(element.EnrolledDate)
+                getEntrollDate(element.EnrolledDateTime)
               }}</span>
             </mat-cell>
           </ng-container>
