--- a/mobile/android/rpm_android/app/src/main/res/layout/card_view_health_trends.xml
+++ b/mobile/android/rpm_android/app/src/main/res/layout/card_view_health_trends.xml
@@ -5,11 +5,12 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="@dimen/margin_10dp"
+    app:contentPadding="0dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="35dp"
         android:background="@color/Primary1">
         <TextView
