uncommented chat and video

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.html
@@ -199,9 +199,9 @@
                     <img
                       class="device_img"
                       src="../../../../../assets/04-Icons/Icons_Video A.svg"
-
+                      (click)="getVideoconnection(false)"
                     />
-                    <!-- (click)="getVideoconnection(false)" -->
+                    
                   </div>
                 </div>
 
@@ -219,9 +219,9 @@
                     <img
                       class="device_img"
                       src="../../../../../assets/04-Icons/Icons_Chat A.svg"
-
+                      (click)="openChatPanel()"
                     />
-                     <!-- (click)="openChatPanel()" -->
+                     
                   </div>
                 </div>
                 <div
@@ -1529,9 +1529,9 @@
                 <img
                   class="device_img"
                   src="../../../../../assets/04-Icons/Icons_Video A.svg"
-
+                  (click)="getVideoconnection(false)"
                 />
-                 <!-- (click)="getVideoconnection(false)" -->
+                 
               </div>
             </div>
             <div
@@ -1549,9 +1549,9 @@
                   class="device_img"
                   id="pd_chat"
                   src="../../../../../assets/04-Icons/Icons_Chat A.svg"
-
-                />
-                  <!-- (click)="openChatPanel()" -->
+                  (click)="openChatPanel()"
+                />  
+                  
               </div>
             </div>
             <div
